--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,9 +26,9 @@
     "@qbs-autonaim/validators": "workspace:*",
     "@t3-oss/env-nextjs": "0.13.10",
     "@tabler/icons-react": "^3.36.0",
-    "@tanstack/react-form": "^1.27.5",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-form": "1.27.5",
+    "@tanstack/react-query": "5.90.12",
+    "@tanstack/react-table": "8.21.3",
     "@trpc/client": "^11.8.0",
     "@trpc/server": "^11.8.0",
     "@trpc/tanstack-react-query": "^11.8.0",
