--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@qbs-autonaim/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "lib": ["ES2022", "DOM"]
