--- a/.env.example
+++ b/.env.example
@@ -69,4 +69,14 @@ AWS_S3_FORCE_PATH_STYLE='true'
 # Application URL (used for workspace URLs and emails)
 APP_URL='http://localhost:3000'
 
+# Interview Buffer Configuration
+# Debounce timeout (seconds) - время ожидания после последнего сообщения перед обработкой
+# Должен быть достаточно большим, чтобы кандидат мог отправить несколько сообщений подряд
+# и учесть время транскрибации голосовых (5-15 сек)
+INTERVIEW_BUFFER_DEBOUNCE_TIMEOUT=120
+# Typing activity timeout (seconds) - время ожидания после активности печати
+INTERVIEW_TYPING_DEBOUNCE_TIMEOUT=30
+# Enable/disable message buffering
+INTERVIEW_BUFFER_ENABLED=true
+
 
