--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "apps/*",
     "packages/*",
     "tooling/*"
-  ]
+  ],
+  "resolutions": {
+    "@ai-sdk/provider": "3.0.0-beta.32",
+    "@ai-sdk/provider-utils": "4.0.0-beta.59"
+  }
 }
