--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    },
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "lib": ["ES2022", "DOM"]
