--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -37,8 +37,8 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "2.0.0-beta.62",
-    "@ai-sdk/openai": "3.0.0-beta.112",
+    "@ai-sdk/deepseek": "2.0.0",
+    "@ai-sdk/openai": "3.0.0",
     "@inngest/realtime": "0.4.5",
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
@@ -48,7 +48,7 @@
     "@qbs-autonaim/shared": "workspace:*",
     "@qbs-autonaim/tg-client": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
-    "ai": "6.0.0-beta.167",
+    "ai": "6.0.0",
     "axios": "^1.13.2",
     "crawlee": "3.15.3",
     "inngest": "3.48.1",
