--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -30,12 +30,12 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "2.0.0-beta.62",
-    "@ai-sdk/openai": "3.0.0-beta.112",
+    "@ai-sdk/deepseek": "2.0.0",
+    "@ai-sdk/openai": "3.0.0",
     "@aws-sdk/client-s3": "3.956.0",
     "@aws-sdk/s3-request-presigner": "3.956.0",
     "@qbs-autonaim/config": "workspace:*",
-    "ai": "^6.0.0-beta.167",
+    "ai": "^6.0.0",
     "effect": "^3.19.13",
     "langfuse": "3.38.6",
     "sharp": "^0.34.5",
