--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -35,6 +35,7 @@
     "@aws-sdk/client-s3": "3.956.0",
     "@aws-sdk/s3-request-presigner": "3.956.0",
     "@qbs-autonaim/config": "workspace:*",
+    "@valibot/to-json-schema": "1.5.0",
     "ai": "6.0.0",
     "effect": "^3.19.13",
     "langfuse": "3.38.6",
