--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -49,7 +49,7 @@
     "@qbs-autonaim/tg-client": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
     "ai": "6.0.0",
-    "axios": "^1.13.2",
+    "axios": "1.13.2",
     "crawlee": "3.15.3",
     "inngest": "3.48.1",
     "langfuse": "3.38.6",
