--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -35,7 +35,7 @@
     "@qbs-autonaim/shared": "workspace:*",
     "file-type": "21.1.1",
     "hono": "4.11.1",
-    "mime-types": "^3.0.2",
+    "mime-types": "3.0.2",
     "zod": "^4.2.1"
   },
   "devDependencies": {
