--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -28,7 +28,7 @@
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "bun with-env bun run --watch src/inngest/server.ts",
-    "inngest": "bun run inngest-cli@latest dev -u http://localhost:8000/api/inngest",
+    "inngest": "npx inngest-cli@latest dev -u http://localhost:8000/api/inngest",
     "hh:parse": "bun with-env bun run src/hh-response-parser.ts",
     "hh:enrich": "bun with-env bun run src/hh-enrich-responses.ts",
     "format": "prettier --check . --ignore-path ../../.gitignore",
@@ -65,7 +65,6 @@
     "@types/bun": "1.3.5",
     "@types/node": "25.0.3",
     "cross-env": "10.1.0",
-    "inngest-cli": "1.15.2",
     "tsdown": "0.18.2",
     "typescript": "5.9.3"
   }
