--- a/.env.example
+++ b/.env.example
@@ -71,9 +71,9 @@ APP_URL='http://localhost:3000'
 
 # Interview Buffer Configuration
 # Debounce timeout (seconds) - время ожидания после последнего сообщения перед обработкой
-# Должен быть достаточно большим, чтобы кандидат мог отправить несколько сообщений подряд
-# и учесть время транскрибации голосовых (5-15 сек)
-INTERVIEW_BUFFER_DEBOUNCE_TIMEOUT=120
+# Рекомендуется 15-20 секунд для баланса между скоростью ответа и группировкой сообщений
+# Учитывает время транскрибации голосовых (5-15 сек)
+INTERVIEW_BUFFER_DEBOUNCE_TIMEOUT=15
 # Typing activity timeout (seconds) - время ожидания после активности печати
 INTERVIEW_TYPING_DEBOUNCE_TIMEOUT=30
 # Enable/disable message buffering
