--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -41,6 +41,7 @@
     "migrate-server-dump": "bun with-env bun src/scripts/migrate-server-dump.ts",
     "migrate-workspace": "bun with-env bun src/scripts/migrate-workspace.ts",
     "migrate-orgs": "bun with-env bun src/scripts/migrate-to-organizations.ts",
+    "fix-workspace-slugs": "bun with-env bun src/scripts/fix-workspace-slug-uniqueness.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "bun run --env-file ../../.env"
   },
