--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,9 +1,9 @@
-name: Deploy Web
+name: Deploy app
 on:
   push:
     branches: [main]
     paths:
-      - "apps/web/**"
+      - "apps/app/**"
       - "packages/**"
 env:
   REGISTRY: ghcr.io
@@ -13,6 +13,7 @@ env:
   IMAGE_TAG: ${{ github.sha }}
 jobs:
   deploy:
+    if: false
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -30,7 +31,7 @@ jobs:
         run: |
           IMAGE_ID=$REGISTRY/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          docker build . --file apps/web/Dockerfile \
+          docker build . --file apps/app/Dockerfile \
             --tag $IMAGE_ID:$IMAGE_TAG \
             --tag $IMAGE_ID:latest
           docker push $IMAGE_ID:latest
@@ -38,4 +39,4 @@ jobs:
       - name: Deploy To Cluster
         uses: kodermax/kubectl-aws-eks@main
         with:
-          args: set image deployment/qbs-autonaim-web qbs-autonaim-web=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          args: set image deployment/qbs-autonaim-app qbs-autonaim-app=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
