--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "@vercel/analytics": "1.6.1",
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
