--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,10 @@ AWS_S3_FORCE_PATH_STYLE='true'
 # Application URL (used for workspace URLs and emails)
 APP_URL='http://localhost:3000'
 
+# Public URLs for web landing page
+NEXT_PUBLIC_APP_URL='http://localhost:3000'
+NEXT_PUBLIC_APP_NAME='QBS Автонайм'
+
 # Interview Buffer Configuration
 # Debounce timeout (seconds) - время ожидания после последнего сообщения перед обработкой
 # Рекомендуется 15-20 секунд для баланса между скоростью ответа и группировкой сообщений
