--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -6,48 +6,45 @@ on:
       - 'packages/jobs/**'
       - 'packages/prompts/**'
       - 'packages/lib/**'
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  CI: "true"
+  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+  IMAGE_TAG: ${{ github.sha }}
 jobs:
-  # Deploy to EKS
   deploy:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.event.pull_request.head.ref, 'dependabot/') == false && startsWith(github.event.pull_request.head.ref, 'renovate/') == false }}
+    permissions:
+      packages: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          node-version: 20
-
-      - name: Login to Yandex Cloud Container Registry
-        id: login-cr
-        uses: yc-actions/yc-cr-login@v2
-        with:
-          yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
-      - name: Build, tag, and push image
-        env:
-          CR_REGISTRY: crpqovavgc2mbmvv32ko
-          CR_REPOSITORY: qbs-autonaim-jobs
-          IMAGE_TAG: ${{ github.sha }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and Push Image
         run: |
-          docker build -f packages/jobs/Dockerfile -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest .
-          docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
-          docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
+          IMAGE_ID=$REGISTRY/$IMAGE_NAME
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          docker build . --file packages/jobs/Dockerfile \
+            --tag $IMAGE_ID:$IMAGE_TAG \
+            --tag $IMAGE_ID:latest
+          docker push $IMAGE_ID:latest
+          docker push $IMAGE_ID:$IMAGE_TAG
       - name: Deploy To Cluster
         uses: kodermax/kubectl-aws-eks@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-          CR_REGISTRY: crpqovavgc2mbmvv32ko
-          CR_REPOSITORY: qbs-autonaim-jobs
-          IMAGE_TAG: ${{ github.sha }}
         with:
-          args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -n qbs
-      - name: Verify Deployment
-        uses: kodermax/kubectl-aws-eks@main
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          args: rollout status deployment/qbs-autonaim-jobs -n qbs
+          args: set image deployment/qbs-autonaim-jobs qbs-autonaim-jobs=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -n qbs
+      - name: Sync Inngest App
+        run: |
+          sleep 10
+          curl -X PUT https://jobs.spilwood.ru/api/inngest
       - name: Sync Inngest App
         run: |
           sleep 10
