--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -37,7 +37,7 @@
     "@qbs-autonaim/config": "workspace:*",
     "@valibot/to-json-schema": "1.5.0",
     "ai": "6.0.3",
-    "effect": "^3.19.13",
+    "effect": "3.19.13",
     "langfuse": "3.38.6",
     "sharp": "^0.34.5",
     "zod": "4.2.1"
