--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,7 +26,7 @@
     "@qbs-autonaim/validators": "workspace:*",
     "@sindresorhus/slugify": "3.0.0",
     "@t3-oss/env-nextjs": "0.13.10",
-    "@tabler/icons-react": "^3.36.0",
+    "@tabler/icons-react": "3.36.0",
     "@tanstack/react-form": "1.27.6",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-table": "8.21.3",
