--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -39,7 +39,7 @@
     "ai": "6.0.3",
     "effect": "3.19.13",
     "langfuse": "3.38.6",
-    "sharp": "^0.34.5",
+    "sharp": "0.34.5",
     "zod": "4.2.1"
   },
   "devDependencies": {
