--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,10 @@
 # This file will be committed to version control, so make sure not to have any secrets in it.
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
-# The database URL is used to connect to your Supabase database.
-POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?workaround=supabase-pooler.vercel"
+# The database URL is used to connect to your PostgreSQL database.
+# For k3s cluster use internal service name: postgresql://user:password@postgres-service:5432/dbname
+# For local development: postgresql://postgres:postgres@localhost:5432/selectio
+POSTGRES_URL="postgresql://postgres:postgres@localhost:5432/selectio"
 
 
 # You can generate the secret via 'openssl rand -base64 32' on Unix
