--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -55,7 +55,7 @@
     "@types/react-dom": "19.2.3",
     "jiti": "2.6.1",
     "tailwindcss": "4.1.18",
-    "tw-animate-css": "^1.4.0",
+    "tw-animate-css": "1.4.0",
     "typescript": "5.9.3"
   }
 }
