--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -35,7 +35,7 @@
     "@trpc/tanstack-react-query": "^11.8.1",
     "@vercel/analytics": "^1.6.1",
     "better-auth": "1.4.9",
-    "date-fns": "^4.1.0",
+    "date-fns": "4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
