--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -56,7 +56,7 @@
     "puppeteer": "24.34.0",
     "puppeteer-extra": "3.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
-    "sharp": "^0.34.5",
+    "sharp": "0.34.5",
     "string-strip-html": "13.5.0",
     "zod": "4.2.1"
   },
