--- a/.github/workflows/tg-client.yml
+++ b/.github/workflows/tg-client.yml
@@ -24,7 +24,7 @@ jobs:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
       - name: Build, tag, and push image
         env:
-          CR_REGISTRY: crpb8701utioog2loisu
+          CR_REGISTRY: crpqovavgc2mbmvv32ko
           CR_REPOSITORY: tg-client
           IMAGE_TAG: ${{ github.sha }}
         run: |
@@ -35,7 +35,7 @@ jobs:
         uses: kodermax/kubectl-aws-eks@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-          CR_REGISTRY: crpb8701utioog2loisu
+          CR_REGISTRY: crpqovavgc2mbmvv32ko
           CR_REPOSITORY: tg-client
           IMAGE_TAG: ${{ github.sha }}
         with:
