--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -23,7 +23,7 @@ jobs:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
       - name: Build, tag, and push image
         env:
-          CR_REGISTRY: crpb8701utioog2loisu
+          CR_REGISTRY: crpqovavgc2mbmvv32ko
           CR_REPOSITORY: app
           IMAGE_TAG: ${{ github.sha }}
         run: |
@@ -34,7 +34,7 @@ jobs:
         uses: kodermax/kubectl-aws-eks@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-          CR_REGISTRY: crpb8701utioog2loisu
+          CR_REGISTRY: crpqovavgc2mbmvv32ko
           CR_REPOSITORY: app
           IMAGE_TAG: ${{ github.sha }}
         with:
