--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -30,8 +30,8 @@
     "@tanstack/react-form": "1.27.6",
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-table": "8.21.3",
-    "@trpc/client": "^11.8.1",
-    "@trpc/server": "^11.8.1",
+    "@trpc/client": "11.8.1",
+    "@trpc/server": "11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
     "@vercel/analytics": "^1.6.1",
     "better-auth": "1.4.9",
