--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,7 +40,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@vercel/analytics": "1.6.1",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
