--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -40,13 +40,13 @@ jobs:
           CR_REPOSITORY: jobs
           IMAGE_TAG: ${{ github.sha }}
         with:
-          args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+          args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -n qbs
       - name: Verify Deployment
         uses: kodermax/kubectl-aws-eks@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: rollout status deployment/jobs
+          args: rollout status deployment/jobs -n qbs
       - name: Sync Inngest App
         run: |
           sleep 10
