--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -31,7 +31,11 @@ RUN bun install
 # Build the project
 COPY --from=builder /app/out/full/ .
 ARG POSTGRES_URL
+ARG NEXT_PUBLIC_APP_URL
+ARG NEXT_PUBLIC_APP_NAME
 ENV POSTGRES_URL=$POSTGRES_URL
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+ENV NEXT_PUBLIC_APP_NAME=$NEXT_PUBLIC_APP_NAME
 ENV CI=true
 RUN bun turbo run build --filter=@qbs-autonaim/app
 
