--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,9 @@ AWS_ACCESS_KEY_ID='minioadmin'
 AWS_SECRET_ACCESS_KEY='minioadmin'
 AWS_S3_FORCE_PATH_STYLE='true'
 
-# Application URL (used for workspace URLs and emails)
+# Application URL (used for OAuth callbacks, workspace URLs and emails)
+# ВАЖНО: В продакшене должен быть публичный URL, а не внутренний адрес контейнера
+# Например: https://yourdomain.com
 APP_URL='http://localhost:3000'
 
 # Public URLs for web landing page
