--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,10 @@ AWS_S3_FORCE_PATH_STYLE='true'
 # Например: https://yourdomain.com
 APP_URL='http://localhost:3000'
 
+# AI Proxy URL (used for OpenAI API proxying, including Whisper transcription)
+# If not set, falls back to APP_URL
+AI_PROXY_URL='http://localhost:3000'
+
 # Public URLs for web landing page
 NEXT_PUBLIC_APP_URL='http://localhost:3000'
 NEXT_PUBLIC_APP_NAME='QBS Автонайм'
