--- a/apps/playwright/package.json
+++ b/apps/playwright/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "bun with-env playwright test",
-    "test:ui": "playwright test --ui",
+    "test:ui": "bun with-env playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
     "test:auth": "playwright test tests/auth",
