--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "5.90.12",
     "@tanstack/react-table": "8.21.3",
     "@trpc/client": "11.8.1",
+    "@trpc/react-query": "^11.8.1",
     "@trpc/server": "11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
     "better-auth": "1.4.9",
