--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -44,7 +44,7 @@
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/emails": "workspace:*",
     "@qbs-autonaim/lib": "workspace:*",
-    "@qbs-autonaim/prompts": "workspace:*",
+    "@qbs-autonaim/ai": "workspace:*",
     "@qbs-autonaim/shared": "workspace:*",
     "@qbs-autonaim/tg-client": "workspace:*",
     "@t3-oss/env-core": "0.13.10",
