--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -35,11 +35,11 @@
     "@trpc/tanstack-react-query": "^11.8.1",
     "better-auth": "1.4.9",
     "date-fns": "4.1.0",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "2.15.4",
+    "recharts": "3.6.0",
     "superjson": "2.2.6",
     "zod": "4.2.1"
   },
