--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@qbs-autonaim/tsconfig/compiled-package.json",
+  "compilerOptions": {
+    "rootDir": "./src"
+  },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
