--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,6 +22,7 @@
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
     "drop": "bun with-env bun src/scripts/drop-schema.ts",
+    "reset-db": "bun with-env bun src/scripts/drop-schema.ts",
     "format": "biome format .",
     "lint": "biome lint .",
     "check": "biome check .",
