--- a/.env.example
+++ b/.env.example
@@ -91,4 +91,10 @@ INTERVIEW_TYPING_DEBOUNCE_TIMEOUT=30
 # Enable/disable message buffering
 INTERVIEW_BUFFER_ENABLED=true
 
+# Unstructured API Configuration
+# URL for Unstructured document parsing service
+UNSTRUCTURED_API_URL='http://localhost:8001'
+# Optional API key for Unstructured service (leave empty for local Docker)
+UNSTRUCTURED_API_KEY=''
+
 
