--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,4 +130,14 @@ services:
       - INNGEST_SIGNING_KEY=1234
     extra_hosts:
       - "host.docker.internal:host-gateway"
+  unstructured:
+    restart: always
+    image: quay.io/unstructured-io/unstructured-api:latest
+    container_name: unstructured
+    ports:
+      - 8001:8000
+    environment:
+      - UNSTRUCTURED_API_KEY=${UNSTRUCTURED_API_KEY:-}
+    volumes:
+      - ./tmp:/tmp
 
