--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
     "@turbo/gen": "2.7.2",
+    "@types/validator": "^13.15.10",
     "concurrently": "^9.2.1",
     "turbo": "2.7.2",
     "typescript": "5.9.3"
@@ -44,5 +45,8 @@
     "apps/*",
     "packages/*",
     "tooling/*"
-  ]
+  ],
+  "dependencies": {
+    "validator": "^13.15.26"
+  }
 }
