--- a/.pr_agent.toml
+++ b/.pr_agent.toml
@@ -86,7 +86,7 @@ publish_output_progress = true
    - Валидировать все внешние входные данные с помощью схем Zod v4
 
 6. Управление монорепозиторием:
-   - Правильно использовать ссылки на рабочее пространство (пакеты @tecno/*)
+   - Правильно использовать ссылки на рабочее пространство (пакеты @qbs-autonaim/*)
    - Обеспечить правильное управление зависимостями между пакетами
    - Следовать последовательным паттернам во всех пакетах рабочего пространства
 
@@ -150,7 +150,7 @@ publish_output_progress = true
    - Поддерживать программы чтения с экрана
 
 8. Управление монорепозиторием:
-   - Правильно использовать ссылки на рабочее пространство (пакеты @tecno/*)
+   - Правильно использовать ссылки на рабочее пространство (пакеты @qbs-autonaim/*)
    - Обеспечить правильное управление зависимостями между пакетами
 
 9. Пользовательский контент:
