--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -53,7 +53,7 @@ reviews:
            - Валидировать все внешние входные данные с помощью схем Zod
 
         6. Управление монорепозиторием и рабочим пространством:
-           - Правильно использовать ссылки на рабочее пространство (пакеты @tecno/*)
+           - Правильно использовать ссылки на рабочее пространство (пакеты @qbs-autonaim/*)
            - Обеспечить правильное управление зависимостями между пакетами
            - Следовать последовательным паттернам во всех пакетах рабочего пространства
            - Использовать зависимости каталога где это уместно
@@ -136,7 +136,7 @@ reviews:
            - Поддерживать программы чтения с экрана
 
         9. Управление монорепозиторием и рабочим пространством:
-           - Правильно использовать ссылки на рабочее пространство (пакеты @tecno/*)
+           - Правильно использовать ссылки на рабочее пространство (пакеты @qbs-autonaim/*)
            - Обеспечить правильное управление зависимостями между пакетами
            - Следовать последовательным паттернам во всех пакетах рабочего пространства
            - Использовать зависимости каталога где это уместно
