--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "apps/*",
     "packages/*",
     "tooling/*"
-  ]
+  ],
+  "dependencies": {
+    "random-word-slugs": "^0.1.7",
+    "unique-names-generator": "^4.7.1"
+  }
 }
