--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,6 +27,7 @@
     "@qbs-autonaim/jobs": "workspace:*",
     "@qbs-autonaim/validators": "workspace:*",
     "@trpc/server": "^11.8.1",
+    "random-word-slugs": "^0.1.7",
     "sanitize-html": "^2.17.0",
     "superjson": "2.2.6",
     "zod": "4.3.4"
