--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,6 +14,7 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.17",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
@@ -33,13 +34,15 @@
     "@trpc/client": "11.8.1",
     "@trpc/server": "11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
+    "ai": "^6.0.17",
     "better-auth": "1.4.10",
     "date-fns": "4.1.0",
-    "motion": "^12.24.7",
     "lucide-react": "0.562.0",
+    "motion": "^12.24.7",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "recharts": "3.6.0",
     "superjson": "2.2.6",
     "zod": "4.3.5"
