--- a/.env.example
+++ b/.env.example
@@ -97,4 +97,12 @@ UNSTRUCTURED_API_URL='http://localhost:8001'
 # Optional API key for Unstructured service (leave empty for local Docker)
 UNSTRUCTURED_API_KEY=''
 
+# Qdrant Vector Database Configuration
+# URL for Qdrant service
+QDRANT_URL='http://localhost:6333'
+# Optional API key for Qdrant (leave empty for local Docker)
+QDRANT_API_KEY=''
+# Collection name for document embeddings
+QDRANT_COLLECTION_NAME='document_embeddings'
+
 
