--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,4 +140,15 @@ services:
       - UNSTRUCTURED_API_KEY=${UNSTRUCTURED_API_KEY:-}
     volumes:
       - ./tmp:/tmp
+  qdrant:
+    restart: always
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    ports:
+      - 6333:6333
+      - 6334:6334
+    volumes:
+      - ./qdrant_storage:/qdrant/storage
+    environment:
+      - QDRANT__SERVICE__GRPC_PORT=6334
 
