--- a/packages/document-processor/package.json
+++ b/packages/document-processor/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/validators": "workspace:*",
+    "@qdrant/js-client-rest": "^1.16.2",
     "llamaindex": "^0.12.1",
-    "pgvector": "^0.2.1",
     "zod": "4.3.5"
   },
   "devDependencies": {
