--- a/.env.example
+++ b/.env.example
@@ -91,12 +91,6 @@ INTERVIEW_TYPING_DEBOUNCE_TIMEOUT=30
 # Enable/disable message buffering
 INTERVIEW_BUFFER_ENABLED=true
 
-# Unstructured API Configuration
-# URL for Unstructured document parsing service
-UNSTRUCTURED_API_URL='http://localhost:8001'
-# Optional API key for Unstructured service (leave empty for local Docker)
-UNSTRUCTURED_API_KEY=''
-
 # Qdrant Vector Database Configuration
 # URL for Qdrant service
 QDRANT_URL='http://localhost:6333'
@@ -104,5 +98,12 @@ QDRANT_URL='http://localhost:6333'
 QDRANT_API_KEY=''
 # Collection name for document embeddings
 QDRANT_COLLECTION_NAME='document_embeddings'
+
+# Docling Document Processing Configuration
+# URL for Docling service
+DOCLING_API_URL='http://localhost:8000'
+# Optional API key for Docling (leave empty for local Docker)
+DOCLING_API_KEY=''
+
 
 
