--- a/.env.example
+++ b/.env.example
@@ -101,7 +101,9 @@ QDRANT_COLLECTION_NAME='document_embeddings'
 
 # Docling Document Processing Configuration
 # URL for Docling service
-DOCLING_API_URL='http://localhost:8000'
+# ВАЖНО: Используйте порт, отличный от PORT приложения (по умолчанию 3000)
+# Для локальной разработки рекомендуется 8001, чтобы избежать конфликтов
+DOCLING_API_URL='http://localhost:8001'
 # Optional API key for Docling (leave empty for local Docker)
 DOCLING_API_KEY=''
 
