--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -45,6 +45,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "3.6.0",
     "superjson": "2.2.6",
+    "use-debounce": "^10.1.0",
     "zod": "4.3.5"
   },
   "optionalDependencies": {
