--- a/apps/interview/Dockerfile
+++ b/apps/interview/Dockerfile
@@ -1,52 +1,60 @@
-FROM oven/bun:1.3.5 AS base
+FROM node:24-alpine AS base
 
-WORKDIR /app
-
-# Install dependencies
-FROM base AS deps
-COPY package.json bun.lock ./
-COPY apps/interview/package.json ./apps/interview/
-COPY packages/interview-ui/package.json ./packages/interview-ui/
-COPY packages/ui/package.json ./packages/ui/
-COPY packages/config/package.json ./packages/config/
-COPY packages/api/package.json ./packages/api/
-COPY packages/db/package.json ./packages/db/
-COPY packages/lib/package.json ./packages/lib/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/validators/package.json ./packages/validators/
-COPY packages/tailwind-config/package.json ./packages/tailwind-config/
-COPY packages/tsconfig/package.json ./packages/tsconfig/
-
-RUN bun install --frozen-lockfile
-
-# Build
 FROM base AS builder
-COPY --from=deps /app/node_modules ./node_modules
+RUN apk update
+RUN apk add --no-cache libc6-compat
+# Install bun
+RUN npm install -g bun
+# Set working directory
+WORKDIR /app
+# Install turbo globally
+RUN npm install -g turbo@2.6.1
 COPY . .
 
-ENV NEXT_TELEMETRY_DISABLED=1
-ENV NODE_ENV=production
+# Generate a partial monorepo with a pruned lockfile for a target workspace.
+# Using @qbs-autonaim/interview as the target workspace
+RUN turbo prune @qbs-autonaim/interview --docker
 
-RUN bun run build --filter=@qbs-autonaim/interview
+# Add lockfile and package.json's of isolated subworkspace
+FROM base AS installer
+RUN apk update
+RUN apk add --no-cache libc6-compat
+# Install bun
+RUN npm install -g bun
+WORKDIR /app
 
-# Production
+# First install the dependencies (as they change less often)
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/bun.lock .
+RUN bun install
+
+# Build the project
+COPY --from=builder /app/out/full/ .
+ARG POSTGRES_URL
+ARG NEXT_PUBLIC_APP_URL
+ARG NEXT_PUBLIC_APP_NAME
+ENV POSTGRES_URL=$POSTGRES_URL
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+ENV NEXT_PUBLIC_APP_NAME=$NEXT_PUBLIC_APP_NAME
+ENV CI=true
+RUN bun turbo run build --filter=@qbs-autonaim/interview
+
 FROM base AS runner
+WORKDIR /app
 
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
-
+# Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/apps/interview/.next/standalone ./
-COPY --from=builder /app/apps/interview/.next/static ./apps/interview/.next/static
-COPY --from=builder /app/apps/interview/public ./apps/interview/public
-
 USER nextjs
 
-EXPOSE 3001
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=installer --chown=nextjs:nodejs /app/apps/interview/.next/standalone ./
+COPY --from=installer --chown=nextjs:nodejs /app/apps/interview/.next/static ./apps/app/.next/static
+COPY --from=installer --chown=nextjs:nodejs /app/apps/interview/public ./apps/app/public
 
-ENV PORT=3001
-ENV HOSTNAME="0.0.0.0"
+# Expose port
+EXPOSE 3000
 
-CMD ["bun", "run", "apps/interview/server.js"]
+# Use node to run the server
+CMD ["node", "apps/interview/server.js"]
