--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -33,9 +33,11 @@ COPY --from=builder /app/out/full/ .
 ARG POSTGRES_URL
 ARG NEXT_PUBLIC_APP_URL
 ARG NEXT_PUBLIC_APP_NAME
+ARG NEXT_PUBLIC_INTERVIEW_URL
 ENV POSTGRES_URL=$POSTGRES_URL
 ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
 ENV NEXT_PUBLIC_APP_NAME=$NEXT_PUBLIC_APP_NAME
+ENV NEXT_PUBLIC_INTERVIEW_URL=$NEXT_PUBLIC_INTERVIEW_URL
 ENV CI=true
 RUN bun turbo run build --filter=@qbs-autonaim/app
 
