--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,7 +18,7 @@
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
-    "@inngest/realtime": "0.4.5",
+    "@inngest/realtime": "^0.4.5",
     "@qbs-autonaim/api": "workspace:*",
     "@qbs-autonaim/auth": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
