--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "@ai-sdk/deepseek": "2.0.4",
     "@ai-sdk/openai": "3.0.7",
-    "@inngest/realtime": "0.4.5",
+    "@inngest/realtime": "git+https://github.com/kodermax/inngest-js.git#realtime-dist",
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/emails": "workspace:*",
