--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,11 +14,11 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
-    "@ai-sdk/react": "^3.0.28",
+    "@ai-sdk/react": "^3.0.29",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
-    "@inngest/realtime": "^0.4.5",
+    "@inngest/realtime": "git+https://github.com/kodermax/inngest-js.git#realtime-dist",
     "@qbs-autonaim/api": "workspace:*",
     "@qbs-autonaim/auth": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
@@ -34,7 +34,7 @@
     "@trpc/client": "11.8.1",
     "@trpc/server": "11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
-    "ai": "^6.0.26",
+    "ai": "^6.0.27",
     "better-auth": "1.4.10",
     "date-fns": "4.1.0",
     "lucide-react": "0.562.0",
