--- a/.env.example
+++ b/.env.example
@@ -107,5 +107,11 @@ DOCLING_API_URL='http://localhost:8001'
 # Optional API key for Docling (leave empty for local Docker)
 DOCLING_API_KEY=''
 
+# Unstructured Document Processing Configuration (Fallback)
+# URL for Unstructured API service
+UNSTRUCTURED_API_URL='http://localhost:8002'
+# Optional API key for Unstructured (leave empty for local Docker)
+UNSTRUCTURED_API_KEY=''
+
 
 
