--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: qbs-dev
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
   inbucket:
     restart: always
     image: inbucket/inbucket:latest
@@ -133,9 +139,29 @@ services:
     image: ds4sd/docling:latest
     container_name: docling
     ports:
-      - 8000:8000
+      - 8001:8000
     environment:
       - DOCLING_API_KEY=${DOCLING_API_KEY:-}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+  unstructured:
+    restart: always
+    image: quay.io/unstructured-io/unstructured-api:latest
+    container_name: unstructured
+    ports:
+      - 8002:8000
+    environment:
+      - UNSTRUCTURED_API_KEY=${UNSTRUCTURED_API_KEY:-}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/general/v0/general"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
   qdrant:
     restart: always
     image: qdrant/qdrant:latest
@@ -147,4 +173,10 @@ services:
       - ./qdrant_storage:/qdrant/storage
     environment:
       - QDRANT__SERVICE__GRPC_PORT=6334
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
