--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "dev": "bun with-env next dev -p 3001",
     "lint": "eslint .",
     "start": "next start",
+    "typecheck": "tsc --noEmit",
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
@@ -52,7 +53,7 @@
     "react": "19.2.3",
     "react-day-picker": "9.13.0",
     "react-dom": "19.2.3",
-    "react-hook-form": "^7.70.0",
+    "react-hook-form": "^7.71.0",
     "react-resizable-panels": "^4.3.3",
     "recharts": "3.6.0",
     "sonner": "^2.0.7",
@@ -64,8 +65,8 @@
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^25.0.5",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.0.6",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
