--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,6 +42,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.0",
     "react-markdown": "^10.1.0",
     "recharts": "3.6.0",
     "superjson": "2.2.6",
