--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches: [main]
     paths:
+      - 'packages/db/**'
       - 'packages/jobs/**'
       - 'packages/prompts/**'
       - 'packages/lib/**'
