--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -33,7 +33,8 @@
     "generate-key": "bun with-env bun src/scripts/generate-encryption-key.ts",
     "set-admin": "bun with-env bun src/scripts/set-admin-role.ts",
     "setup": "bun with-env bun src/scripts/setup-uuid-v7.ts",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "seed": "bun with-env bun src/seed/preset-domains.ts",
+    "typecheck": "tsc --noEmit",
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
