--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -16,7 +16,7 @@
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@qbs-autonaim/config": "workspace:*",
