--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -20,7 +20,7 @@
     "build:watch": "tsdown --watch",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@t3-oss/env-core": "0.13.10",
