--- a/packages/document-processor/package.json
+++ b/packages/document-processor/package.json
@@ -18,7 +18,7 @@
     "check": "biome check .",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@qbs-autonaim/db": "workspace:*",
