--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -33,7 +33,7 @@
     "hh:enrich": "bun with-env bun run src/hh-enrich-responses.ts",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "typecheck": "tsc --noEmit",
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
