--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -18,6 +18,10 @@
     "./image": {
       "types": "./dist/image.d.mts",
       "default": "./dist/image.mjs"
+    },
+    "./instrumentation": {
+      "types": "./dist/instrumentation.d.mts",
+      "default": "./dist/instrumentation.mjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -34,6 +38,9 @@
     "@ai-sdk/openai": "3.0.8",
     "@aws-sdk/client-s3": "3.966.0",
     "@aws-sdk/s3-request-presigner": "3.966.0",
+    "@langfuse/otel": "^4.5.1",
+    "@langfuse/tracing": "^4.5.1",
+    "@opentelemetry/sdk-node": "^0.209.0",
     "@qbs-autonaim/config": "workspace:*",
     "ai": "6.0.29",
     "langfuse": "3.38.6",
