--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,8 @@
     "check": "biome check .",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "sync-gig-counts": "bun run src/scripts/sync-gig-response-counts.ts"
   },
   "dependencies": {
     "@qbs-autonaim/ai": "workspace:*",
