--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,7 @@
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/document-processor": "workspace:*",
     "@qbs-autonaim/jobs": "workspace:*",
+    "@qbs-autonaim/server-utils": "workspace:*",
     "@qbs-autonaim/validators": "workspace:*",
     "@trpc/server": "^11.8.1",
     "random-word-slugs": "^0.1.7",
