--- a/packages/server-utils/package.json
+++ b/packages/server-utils/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     }
   },
   "dependencies": {
