--- a/packages/server-utils/package.json
+++ b/packages/server-utils/package.json
@@ -2,6 +2,7 @@
   "name": "@qbs-autonaim/server-utils",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.mts",
