--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,7 @@
     "ignoreUnknown": false,
     "includes": [
       "**",
+      "!**/.css",
       "!**/*.json",
       "!**/node_modules",
       "!**/.next",
