--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev -p 3003",
-    "lint": "eslint .",
+    "lint": "biome lint .",
     "start": "next start"
   },
   "dependencies": {
