--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "bun with-env next build",
     "dev": "bun with-env next dev -p 3002",
-    "lint": "eslint .",
+    "lint": "biome lint .",
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "with-env": "bun run --env-file ../../.env"
