--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,7 @@ AI_PROXY_URL='http://localhost:3000'
 # Public URLs for web landing page
 NEXT_PUBLIC_APP_URL='http://localhost:3000'
 NEXT_PUBLIC_APP_NAME='QBS Автонайм'
+NEXT_PUBLIC_DOCS_URL='https://docs.selectio.ru'
 
 # Interview Buffer Configuration
 # Debounce timeout (seconds) - время ожидания после последнего сообщения перед обработкой
